<resources>
    <string name="app_name">sidemenu</string>
    <string name="i_agree_to_terms_and_conditions">I agree to Terms and Conditions</string>
    <string name="Clear_All">Clear All</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_mobile">Enter Mobile</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="address">Address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="reference_number">Reference Number</string>
    <string name="case_id">Case ID</string>
    <string name="description">Description</string>
    <string name="insure_name">Insure Name</string>
    <string name="insurer_phone_number">Insurer Phone Number</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pincode">Pincode</string>
    <string name="landmark">Landmark</string>
    <string name="thirdparty_details">ThirdParty Details</string>
    <string name="insurer_details">Insurer Details</string>
    <string name="my_computer">My Computer</string>
    <string name="agent_name">Agent Name</string>
    <string name="id">ID</string>
    <string name="search">Search</string>
    <string name="update">Update</string>
    <string-array name="spinner_agent_name">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>